--- a/app/src/main/res/layout/content_create_profile.xml
+++ b/app/src/main/res/layout/content_create_profile.xml
@@ -47,7 +47,7 @@
             android:layout_marginStart="5dp"/>
     </RelativeLayout>
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
@@ -72,7 +72,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginStart="5dp"/>
-    </RelativeLayout>
+    </RelativeLayout>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
