--- a/app/src/main/res/layout/content_add.xml
+++ b/app/src/main/res/layout/content_add.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="50dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="35dp"
     android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="practicalventurino.myseneca.ca.sugartracker.AddActivity"
